libs/@local/hashql/syntax-jexpr/src/parser/object/snapshots/hashql_syntax_jexpr__parser__object__dict__tests__parse_dict_array_format_with_too_few_items.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/dict.rs
description: Rejects dict entry with too few items in array format
expression: "{\"#dict\": [\n            [{\"#literal\": \"key1\"}]\n        ]}"
---
[31m[parser::object::dict-entry-too-few-items] Error:[0m Parser
   ╭─[ <unknown>:2:13 ]
   │
 2 │             [{"#literal": "key1"}]
   │             ───────────┬──────────  
   │                        ╰──────────── Incomplete dictionary entry
   │ 
   │ Help: Expected 2 items (key and value), but found only 1
   │ 
   │ Note: Dictionary entries must have exactly two elements: a key and a value.
───╯
