libs/@local/hashql/syntax-jexpr/src/parser/object/snapshots/hashql_syntax_jexpr__parser__object__dict__tests__parse_dict_array_format_with_too_many_items.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/dict.rs
description: Rejects dict entry with too many items in array format
expression: "{\"#dict\": [\n            [{\"#literal\": \"key1\"}, {\"#literal\": \"value1\"}, {\"#literal\": \"extra\"}]\n        ]}"
---
[31m[parser::object::dict-entry-too-many-items] Error:[0m Parser
   ╭─[ <unknown>:2:60 ]
   │
 2 │             [{"#literal": "key1"}, {"#literal": "value1"}, {"#literal": "extra"}]
   │                                                            ──────────┬──────────  
   │                                                                      ╰──────────── Remove this element
   │ 
   │ Help: Dictionary entries must contain exactly 2 items (key and value), but found 3
   │ 
   │ Note: Dictionary entries must have exactly two elements: a key and a value.
───╯
