libs/@local/hashql/syntax-jexpr/src/parser/object/snapshots/hashql_syntax_jexpr__parser__object__dict__tests__parse_dict_with_complex_values.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/dict.rs
description: Parses a dict with complex values using object format
expression: "{\"#dict\": {\n            \"simple\": {\"#literal\": \"value\"},\n            \"nested\": {\"#struct\": {\"name\": {\"#literal\": \"Alice\"}}},\n            \"list\": {\"#list\": [{\"#literal\": 1}, {\"#literal\": 2}]},\n            \"function\": [\"add\", {\"#literal\": 1}, {\"#literal\": 2}]\n        }}"
---
Expr#4294967040@33
  ExprKind (Dict)
    DictExpr#4294967040@32
      DictEntry#4294967040@3
        Expr#4294967040@0
          ExprKind (Literal)
            LiteralExpr#4294967040@0
              LiteralKind (String)
                StringLiteral#4294967040@0 (simple)
        Expr#4294967040@2
          ExprKind (Literal)
            LiteralExpr#4294967040@1
              LiteralKind (String)
                StringLiteral#4294967040@1 (value)
      DictEntry#4294967040@12
        Expr#4294967040@4
          ExprKind (Literal)
            LiteralExpr#4294967040@4
              LiteralKind (String)
                StringLiteral#4294967040@4 (nested)
        Expr#4294967040@11
          ExprKind (Struct)
            StructExpr#4294967040@10
              StructEntry#4294967040@9 (key: name)
                Expr#4294967040@8
                  ExprKind (Literal)
                    LiteralExpr#4294967040@7
                      LiteralKind (String)
                        StringLiteral#4294967040@7 (Alice)
      DictEntry#4294967040@20
        Expr#4294967040@13
          ExprKind (Literal)
            LiteralExpr#4294967040@13
              LiteralKind (String)
                StringLiteral#4294967040@13 (list)
        Expr#4294967040@19
          ExprKind (List)
            ListExpr#4294967040@18
              ListElement#4294967040@15
                Expr#4294967040@15
                  ExprKind (Literal)
                    LiteralExpr#4294967040@14
                      LiteralKind (Integer)
                        IntegerLiteral#4294967040@14 (1)
              ListElement#4294967040@17
                Expr#4294967040@17
                  ExprKind (Literal)
                    LiteralExpr#4294967040@16
                      LiteralKind (Integer)
                        IntegerLiteral#4294967040@16 (2)
      DictEntry#4294967040@31
        Expr#4294967040@21
          ExprKind (Literal)
            LiteralExpr#4294967040@21
              LiteralKind (String)
                StringLiteral#4294967040@21 (function)
        Expr#4294967040@30
          ExprKind (Call)
            CallExpr#4294967040@30
              Expr#4294967040@25
                ExprKind (Path)
                  Path#4294967040@25 (rooted: false)
                    PathSegment#4294967040@24 (name: add)
              Argument#4294967040@27
                Expr#4294967040@27
                  ExprKind (Literal)
                    LiteralExpr#4294967040@26
                      LiteralKind (Integer)
                        IntegerLiteral#4294967040@26 (1)
              Argument#4294967040@29
                Expr#4294967040@29
                  ExprKind (Literal)
                    LiteralExpr#4294967040@28
                      LiteralKind (Integer)
                        IntegerLiteral#4294967040@28 (2)
