libs/@local/hashql/syntax-jexpr/src/parser/object/snapshots/hashql_syntax_jexpr__parser__object__dict__tests__parse_empty_dict_array_format.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/object/dict.rs
description: Parses an empty dict using array format
expression: "{\"#dict\": []}"
---
Expr#4294967040@1
  ExprKind (Dict)
    DictExpr#4294967040@0
